# highperf-ai-ml-inference

./: ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Dockerfile.gpu  README.md
.devcontainer/: devcontainer
.github/workflows/: ci-cpu.yml  ci.yml
include/: infer_api.h
scripts/: fetch_assets.sh  fetch_libtorch.sh
src/: backend_libtorch.cpp  backend_libtorch.h  backend_onnx.cpp  backend_onnx.h  image_io.cpp  image_io.h  infer_api.cpp  main.cpp
